--- a/index.HTML
+++ b/index.HTML
@@ -288,7 +288,7 @@
       <a href="#certificates">Certificates</a>
       <a href="#experience">Experience</a>
       <a href="#contact">Get in Touch</a>
-      <a href="manoj resume .pdf" download class="resume-btn">📄 Resume</a>
+      <a href="MANU.pdf" download class="resume-btn">📄 Resume</a>
     </nav>
   </header>
 
@@ -599,5 +599,6 @@
  
 </body>
 </html>
+
 
 
